--- a/index.html
+++ b/index.html
@@ -11,14 +11,36 @@
     <nav class="navbar">
       <div class="navbar-nav">
         <ul>
-          <li class="nav-item">Top</li>
-          <li class="nav-item">About</li>
-          <li class="nav-item">Skill</li>
-          <li class="nav-item">Portfolio</li>
-          <li class="nav-item">Contact</li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Top</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Skill</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Contact</a>
+          </li>
         </ul>
       </div>
     </nav>
+
+    <header>
+      <div class="image">
+        <img src="Images/福岡.jpeg" alt="Fukuoka image" width="100%" height="100%">
+        <div class="text">
+          <h1>Portfolio</h1>
+          <em>Beginner Web Enginner</em>
+          <br>
+          <a class="btn" href="">About</a>
+        </div>
+      </div>
+    </header>
     <!-- section1 -->
     自己紹介
     名前	谷口 末成 ( Tomoaki Taniguchi )
